[package]
name = "rockscache"
version = "0.1.0"
edition = "2021"
authors = ["Flynn <ling7334@gmail.com>"]
description = "Redis Cache Library To Ensure Eventual Consistency And Strong Consistency With DB"
license = "BSD-3-Clause license"
documentation = "https://github.com/ling7334/rockscache-rs"
homepage = "https://github.com/ling7334/rockscache-rs"
repository = "https://github.com/ling7334/rockscache-rs"
readme = "README.md"
keywords = ["cache", "redis", "consistency", "distributed"]
categories = ["asynchronous", "concurrency", "caching"]
exclude = [
    "test/*",
    "tests/*",
    "benches/*",
    ".github/*",
    ".gitignore",
    ".dockerignore",
    ".pre-commit-config.yaml",
    "CODE_OF_CONDUCT.md",
    ".markdownlint.yaml"
]


[dependencies]
r2d2 = "0.8"
rand = "0.8"
redis = {version="0.23", features=["r2d2"]}
threadpool = "1.8"
# tokio = {version = "1", default-features = false, features = ["rt"]}
uuid = { version = "1", features=["v4"] }

singleflight = {path="singleflight"}
