[package]
name = "rockscache"
version = "0.1.0"
edition = "2021"
authors = ["Flynn <ling7334@gmail.com>"]
description = "Redis Cache Library To Ensure Eventual Consistency And Strong Consistency With DB"
license = "BSD-3-Clause license"
documentation = "https://github.com/ling7334/rockscache-rs"
homepage = "https://github.com/ling7334/rockscache-rs"
repository = "https://github.com/ling7334/rockscache-rs"
readme = "README.md"
keywords = ["cache", "redis", "consistency", "distributed"]
categories = ["asynchronous", "concurrency", "caching"]
exclude = [
    "test/*",
    "tests/*",
    "benches/*",
    ".github/*",
    ".gitignore",
    ".dockerignore",
    ".pre-commit-config.yaml",
    "CODE_OF_CONDUCT.md",
    ".markdownlint.yaml"
]


[dependencies]
bb8-redis = {version="0.13", optional=true}
r2d2 = { version = "0.8", optional=true}
rand = "0.8"
redis = {version="0.23", features=["r2d2"]}
threadpool = { version = "1.8", optional=true }
tracing = { version = "0.1", features=["log"]}
tokio = {version = "1", default-features = false, features = ["rt"], optional=true}
uuid = { version = "1", features=["v4"] }

singleflight = {path="singleflight"}

[dev-dependencies]
tracing-test = "0.2"

[features]
async = ["dep:tokio", "dep:bb8-redis"]
thread = ["dep:threadpool", "dep:r2d2"]
default = ["thread"]