[package]
name = "singleflight"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1"
parking_lot = "0.12"
tracing = { version="0.1", features=["log"] }

[dev-dependencies]
tracing-test = "0.2"
tokio = { version="1", features=["rt", "macros"] }
